# otus-explainable-ml

./: README.md  pyproject.toml  requirements.txt
notebooks/: shap.ipynb
