[project]
name = "otus-explainable-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "shap==0.46.0",
]
